--- a/pom.xml
+++ b/pom.xml
@@ -378,6 +378,7 @@
     <!-- Don't update to 1.7.5+ until Hadoop uses Jackson 1.9+ -->
     <avro.version>1.7.4</avro.version>
     <hadoop.version>2.3.0</hadoop.version>
+    <!-- Avoid 0.9.0 / 0.8.2 due to compatibility issue: -->
     <crunch.version>0.10.0-hadoop2</crunch.version>
     <!-- our custom props -->
     <module.jspx.package>override-me</module.jspx.package>
