--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -152,6 +152,8 @@ model = {
   # Does not have effect on all models yet.
   test-set-fraction = 0
 
+  # The default master to use for Spark runs.
+  spark-master= local
 }
 
 
