--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>com.cloudera.oryx</groupId>
   <artifactId>oryx</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <dependencyManagement>
@@ -874,7 +874,7 @@
     <connection>scm:git:https://github.com/cloudera/oryx.git</connection>
     <url>scm:git:https://github.com/cloudera/oryx.git</url>
     <developerConnection>scm:git:https://github.com/cloudera/oryx.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>oryx-1.0.0</tag>
   </scm>
   
   <prerequisites>
