--- a/serving-common/pom.xml
+++ b/serving-common/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>com.cloudera.oryx</groupId>
     <artifactId>oryx</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -26,7 +26,7 @@
   <packaging>jar</packaging>
   <name>Oryx Serving Layer Common</name>
   <description>Code common to all model serving implementations</description>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
