--- a/pom.xml
+++ b/pom.xml
@@ -215,8 +215,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <!-- Don't update to 12+ until Hadoop uses 12+ -->
-        <version>11.0.2</version>
+        <version>14.0.1</version>
       </dependency>
 
       <dependency>
@@ -371,6 +370,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
 
@@ -426,7 +433,6 @@
     <!-- our custom props -->
     <spark.version>1.0.2</spark.version>
     <protobuf.version>2.5.0</protobuf.version>
-    <scala.version>2.10.4</scala.version>
     <module.jspx.package>override-me</module.jspx.package>
   </properties>
 
