Update RAT to 0.11

--- a/pom.xml
+++ b/pom.xml
@@ -704,9 +704,10 @@
         <plugin>
           <groupId>org.apache.rat</groupId>
           <artifactId>apache-rat-plugin</artifactId>
-          <version>0.10</version>
+          <version>0.11</version>
           <configuration>
             <excludes>
+              <exclude>.travis.yml</exclude>
               <exclude>**/*.conf</exclude>
               <exclude>**/*.iml</exclude>
               <exclude>**/*.md</exclude>
