Add disable-write-updates to optionally disable upload of input from serving layer

--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -82,6 +82,11 @@ serving-layer = {
   # Optional. Name of an implementation of CandidateFilter to use. See CandidateFilter javadoc.
   # This only applies to als-model at the moment.
   candidate-filter-class = null
+
+  # If set to true, the Serving Layer does not write data to HDFS for the Computation Layer.
+  # It only updates models in memory. This is intended for use when the data will be written
+  # to HDFS by another process. Do not set this normally.
+  disable-write-updates = false
 }
 
 # computation-layer
