Clarify values of kmeans-model.normalize

--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -238,11 +238,13 @@ kmeans-model = ${model} {
   type = kmeans
 
   normalize = {
+    # z, linear, log or none:
     default-transform = none
     #sparse = true
     #z-transform = ["foo", 7 ]
     #no-transform = [ "abc" ]
     #linear-transform = [ 2, 3, 4 ]
+    #log-transform = [ 2, 3, 4 ]
   }
 
   # How many sketch passes to run
