--- a/pom.xml
+++ b/pom.xml
@@ -759,7 +759,7 @@
           <executions>
             <execution>
               <id>check-api</id>
-              <phase>verify</phase>
+              <phase>install</phase>
               <goals>
                 <goal>check</goal>
               </goals>
