Don't actually fail build on clirr error

--- a/pom.xml
+++ b/pom.xml
@@ -765,6 +765,9 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <failOnError>false</failOnError>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
