--- a/pom.xml
+++ b/pom.xml
@@ -523,7 +523,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.17</version>
           <configuration>
-            <argLine>-Xmx2g</argLine>
+            <argLine>${argLine} -Xmx2g</argLine>
             <reuseForks>false</reuseForks>
           </configuration>
         </plugin>
@@ -681,7 +681,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.17</version>
           <configuration>
-            <argLine>-Xmx2g</argLine>
+            <argLine>${argLine} -Xmx2g</argLine>
             <reuseForks>false</reuseForks>
             <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
           </configuration>
