--- a/pom.xml
+++ b/pom.xml
@@ -406,10 +406,6 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
@@ -523,7 +519,6 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.17</version>
           <configuration>
-            <argLine>${argLine} -Xmx2g</argLine>
             <reuseForks>false</reuseForks>
           </configuration>
         </plugin>
@@ -681,7 +676,6 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.17</version>
           <configuration>
-            <argLine>${argLine} -Xmx2g</argLine>
             <reuseForks>false</reuseForks>
             <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
           </configuration>
@@ -1009,6 +1003,17 @@
       <properties>
         <hadoop.version>2.0.0-cdh4.7.0</hadoop.version>
       </properties>
+    </profile>
+    <profile>
+      <id>jacoco</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
