--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,7 @@
     <crunch.version>0.11.0-hadoop2</crunch.version>
     <!-- our custom props -->
     <spark.version>1.0.2</spark.version>
+    <scala.version>2.10.4</scala.version>
     <protobuf.version>2.5.0</protobuf.version>
     <module.jspx.package>override-me</module.jspx.package>
   </properties>
