Closes #93 : ensure Example.hashCode is well distributed in all cases, and loosen some tests whose result changes

--- a/rdf-computation/src/it/resources/IrisIT.conf
+++ b/rdf-computation/src/it/resources/IrisIT.conf
@@ -4,4 +4,5 @@ inbound.column-names=["sepal length", "sepal width", "petal length", "petal widt
 model.num-trees=2
 model.min-node-size=5
 model.fraction-features-to-try=1
+model.max-split-candidates=1000
 computation-layer.parallelism=1
