--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>com.cloudera.oryx</groupId>
   <artifactId>oryx</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>pom</packaging>
 
   <dependencyManagement>
@@ -901,7 +901,7 @@
     <connection>scm:git:https://github.com/cloudera/oryx.git</connection>
     <url>scm:git:https://github.com/cloudera/oryx.git</url>
     <developerConnection>scm:git:https://github.com/cloudera/oryx.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>oryx-1.0.1</tag>
   </scm>
   
   <prerequisites>
