--- a/serving/pom.xml
+++ b/serving/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>com.cloudera.oryx</groupId>
     <artifactId>oryx</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -26,7 +26,7 @@
   <packaging>jar</packaging>
   <name>Oryx Serving Layer</name>
   <description>Serving Layer binary</description>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <properties>
     <module.jspx.package>com.cloudera.oryx.serving.web</module.jspx.package>
