Add configuration for crunch.tmp.dir

--- a/common/src/main/resources/reference.conf
+++ b/common/src/main/resources/reference.conf
@@ -112,6 +112,9 @@ computation-layer = {
   # Multiple of memory required per worker (really, reducer), in MB, for high-memory steps
   # Default to 3x the M/R default.
   worker-high-memory-factor = 3
+
+  # HDFS location where the computation layer can write temp files
+  tmp-dir = "/tmp"
 }
 
 
