--- a/pom.xml
+++ b/pom.xml
@@ -517,7 +517,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18</version>
+          <version>2.18.1</version>
           <configuration>
             <reuseForks>false</reuseForks>
           </configuration>
@@ -558,7 +558,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.8</version>
           <configuration>
             <!-- Try to reduce impact of ERROR: Unable to determine if... plugin bug -->
             <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
@@ -767,8 +767,9 @@
               <goals>
                 <goal>prepare-agent</goal>
               </goals>
+              <!-- Append since we don't reuse JVM forks -->
               <configuration>
-                <append>false</append>
+                <append>true</append>
               </configuration>
             </execution>
             <execution>
