Reduce integration test load again for Travis

--- a/als-computation/src/it/resources/AbstractComputationIT.conf
+++ b/als-computation/src/it/resources/AbstractComputationIT.conf
@@ -2,4 +2,6 @@ model=${als-model}
 model.instance-dir=/tmp/OryxTest
 model.local-computation=true
 model.local-data=true
+model.iterations.max=4
+computation-layer.parallelism=1
 test.integration=true
