--- a/kmeans-computation/src/it/resources/AbstractComputationIT.conf
+++ b/kmeans-computation/src/it/resources/AbstractComputationIT.conf
@@ -2,4 +2,5 @@ model=${kmeans-model}
 model.instance-dir=/tmp/OryxTest
 model.local-computation=true
 model.local-data=true
+computation-layer.parallelism=1
 test.integration=true
