--- a/rdf-computation/src/it/resources/AbstractComputationIT.conf
+++ b/rdf-computation/src/it/resources/AbstractComputationIT.conf
@@ -2,4 +2,5 @@ model=${rdf-model}
 model.instance-dir=/tmp/OryxTest
 model.local-computation=true
 model.local-data=true
+computation-layer.parallelism=1
 test.integration=true
